--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,10 @@ captures
 !*.xcodeproj/project.xcworkspace/
 !*.xcworkspace/contents.xcworkspacedata
 **/xcshareddata/WorkspaceSettings.xcsettings
+
+# OAuth configuration (keep sensitive)
+oauth.properties
+
+# Temporary files
+*.tmp
+*.bak
